--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Portafolio de Mirko Leonel Vidal, Técnico en Desarrollo Web Full Stack de Paraná, Entre Ríos. Proyectos en Node.js, Python, SQL y diseño web interactivo estilo Windows XP.">
+  <meta name="keywords" content="Mirko Vidal, Mirko Leonel Vidal, Desarrollador Web, Full Stack, Paraná, Entre Ríos, Programador, Portfolio, Windows XP, Node.js, Python">
+  <meta name="author" content="Mirko Leonel Vidal">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mirkovidal.github.io/portafolio-xp/">
+  <meta property="og:title" content="Mirko Vidal - Desarrollador Full Stack">
+  <meta property="og:description" content="¡Bienvenido a mi escritorio! Entra a mi portafolio interactivo estilo Windows XP y prueba mis aplicaciones.">
+  <meta property="og:image" content="https://mirkovidal.github.io/portafolio-xp/images/projects/portfolio/desktop.png">
+  <meta name="google-site-verification" content="d00tx1_s0_7a-DaOjtCQ3-Ss_f_uy0Nou_gbDkS1Q3k" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Portafolio - Windows XP</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
