--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
     </div>
     <div class="window-content">
-      <p>Hola, soy Mirko Leonel Vidal, un estudiante en Técnico en Desarrollo Web en la Universidad Nacional de Entre Ríos.</p>
+      <p>Hola, soy <strong>Mirko Leonel Vidal</strong>, Desarrollador <strong>Full Stack</strong> y Técnico en Desarrollo Web egresado de la <strong>Universidad Nacional de Entre Ríos (UNER)</strong>.</p>
       <p>Me entusiasma la infinidad de cosas que se pueden crear con código y la posibilidad de diseñar aplicaciones que resuelvan problemas reales.</p>
       <div class="skills-section">
         <h3>Mis Habilidades</h3>
