--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Portafolio - Windows XP</title>
-  
+  <link rel="icon" type="image/png" href="images/portafolio-icon.png">
   <meta name="description" content="Portafolio de Mirko Leonel Vidal, Técnico en Desarrollo Web Full Stack. Proyectos en Node.js, Python, SQL y diseño web interactivo estilo Windows XP.">
   <meta name="keywords" content="Mirko Vidal, Desarrollador Web, Full Stack, Paraná, Entre Ríos, Programador, Portfolio, Windows XP, Node.js, Python">
   <meta name="author" content="Mirko Leonel Vidal">
